--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,7 +1,7 @@
 name: 'Terraform'
 
 on:
-  [push, pull_request]:
+  push:
     branches:
     - main
   pull_request:
@@ -26,10 +26,10 @@ jobs:
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
       with:
-        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+        cli_config_credentials_token: ${{ secrets.TFCLOUD }}
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    - name: Terraform Init
+    - name: Terraform Init-
       run: terraform init
 
     # Checks that all Terraform configuration files adhere to a canonical format
