--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -3,9 +3,8 @@ name: 'Terraform'
 on:
   push:
     branches:
-    - main
-  pull_request:
-
+      - master
+      
 jobs:
   terraform:
     name: 'Terraform'
@@ -34,7 +33,7 @@ jobs:
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
-      run: terraform fmt
+      run: terraform fmt 
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
